removed incorrect data

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <tr>
             <td>Francis</td>
             <td>29</td>
-			<td>Indians</td>
+			<td>Indian</td>
 			<td>1989-10-04</td>
             <td>BE</td>
 			<td>IT</td>
