--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            
          </tr>
          <tr>
-            <td>Francis</td>
+            <td>Francis1</td>
             <td>29</td>
 			<td>Indian</td>
 			<td>1989-10-04</td>
@@ -36,7 +36,7 @@
 			
          </tr>
 		  <tr>
-            <td>Lavanya</td>
+            <td>Lavanya1</td>
             <td>25</td>
 			<td>Indian</td>
 			<td>1990-10-04</td>
