--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<td>Indian</td>
 			<td>1989-10-04</td>
             <td>BE</td>
-			<td>IT2</td>
+			<td>IT</td>
             <td>Single</td>
 			<td>Chennai</td>
             <td>Tamil</td>
@@ -77,7 +77,7 @@
 			<td>Indian</td>
 			<td>1991-10-04</td>
             <td>BE</td>
-			<td>NonIT2</td>
+			<td>NonIT</td>
             <td>Single</td>
 			<td>Madurai</td>
             <td>Malayalam</td>
