--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <tr>
             <td>Francis</td>
             <td>29</td>
-			<td>Indian</td>
+			<td>Indians</td>
 			<td>1989-10-04</td>
             <td>BE</td>
 			<td>IT</td>
@@ -38,7 +38,7 @@
 		  <tr>
             <td>Lavanya</td>
             <td>25</td>
-			<td>Indian</td>
+			<td>Indians</td>
 			<td>1990-10-04</td>
             <td>BE</td>
 			<td>Working</td>
