--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <tr>
             <td>Francis</td>
             <td>29</td>
-			<td>Indians</td>
+			<td>Indian</td>
 			<td>1989-10-04</td>
             <td>BE</td>
 			<td>IT</td>
@@ -38,7 +38,7 @@
 		  <tr>
             <td>Lavanya</td>
             <td>25</td>
-			<td>Indians</td>
+			<td>Indian</td>
 			<td>1990-10-04</td>
             <td>BE</td>
 			<td>Working</td>
@@ -77,7 +77,7 @@
 			<td>Indian</td>
 			<td>1991-10-04</td>
             <td>BE</td>
-			<td>NonIT</td>
+			<td>NonIT1</td>
             <td>Single</td>
 			<td>Madurai</td>
             <td>Malayalam</td>
@@ -89,7 +89,7 @@
 			<td>Indian</td>
 			<td>1986-10-04</td>
             <td>BE</td>
-			<td>HR</td>
+			<td>HR1</td>
             <td>Married</td>
 			<td>Chennai</td>
             <td>English</td>
